@@ -9,6 +9,7 @@ Process Hacker
    * Removed tooltip text truncation
    * Updated ExtendedTools plugin:
      * Added Firewall Status column
+   * Improved cycle-based CPU usage calculation
  * FIXED:
    * Fixed file name resolution bug
    * Save settings on shutdown/logoff
